--- a/trabajo_final_grupo2/src/App.css
+++ b/trabajo_final_grupo2/src/App.css
@@ -43,4 +43,19 @@
 
 
 
+/* #main_wrapper{
+  width: 1050px;
+}
+#frequent{
+  background-color: #f6fafd ;
+  width: 1250px;
+}
 
+#button,#button2, #button3, #button4, #button5{
+  background-color: #00597f;
+}
+
+#servicios{
+  background-image: url( https://clinicadentalore.com/wp-content/themes/sisweb/images/backgrounds/title/01.jpg);
+}
+ */
